<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/design_default_color_background"
        android:text="@string/cancel"
        android:textColor="@color/design_default_color_primary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/etInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="150dp"
        android:width="200dp"
        android:minHeight="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvInterestRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="150dp"
        android:width="125dp"
        android:height="30dp"
        android:gravity="center_vertical"
        android:text="@string/interest_rate"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="75dp"
        android:width="200dp"
        android:minHeight="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tvPaymentAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="75dp"
        android:width="125dp"
        android:height="30dp"
        android:gravity="center_vertical"
        android:text="@string/payment_amount"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:width="200dp"
        android:minHeight="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvInitialBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-75dp"
        android:width="125dp"
        android:height="30dp"
        android:gravity="center_vertical"
        android:text="@string/initial_balance"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/tvCurrentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:width="125dp"
        android:height="30dp"
        android:gravity="center_vertical"
        android:text="@string/current_balance"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlCompat" />

    <RadioGroup
        android:id="@+id/rgAccountType"
        android:layout_width="163dp"
        android:layout_height="146dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="-350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/rbCDs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cds"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbLoans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loans"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rbCheckingAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checking_accounts"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="-350dp"
        android:width="100dp"
        android:height="35dp"
        android:gravity="center_vertical"
        android:text="@string/account_type"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-200dp"
        android:layout_marginTop="-150dp"
        android:width="125dp"
        android:height="30dp"
        android:gravity="center_vertical"
        android:text="@string/account_number"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etInitialBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="-75dp"
        android:width="200dp"
        android:minHeight="30dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-150dp"
        android:layout_marginTop="350dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/etAccountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="-150dp"
        android:width="200dp"
        android:background="@drawable/border"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:minHeight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>